Add info for gender

--- a/Oniria.Infrastructure.Persistence/Oniria.Infrastructure.Persistence.csproj
+++ b/Oniria.Infrastructure.Persistence/Oniria.Infrastructure.Persistence.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <Folder Include="DependencyInjections\" />
     <Folder Include="Migrations\" />
-    <Folder Include="Repositories\SqlServer\" />
+    <Folder Include="Repositories\Base\" />
   </ItemGroup>
 
 </Project>
