--- a/Oniria/appsettings.json
+++ b/Oniria/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=DESKTOP-AGV4DRE\\SQLEXPRESS;Database=Oniria;Integrated Security=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
