--- a/Oniria.Infrastructure.Shared/Oniria.Infrastructure.Shared.csproj
+++ b/Oniria.Infrastructure.Shared/Oniria.Infrastructure.Shared.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,19 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.20" />
+    <PackageReference Include="MailKit" Version="4.7.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+    <PackageReference Include="MimeKit" Version="4.7.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Oniria.Core.Application\Oniria.Core.Application.csproj" />
     <ProjectReference Include="..\Oniria.Core.Domain\Oniria.Core.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-    <Folder Include="Migrations\" />
-    <Folder Include="Repositories\Base\" />
+    <ProjectReference Include="..\Oniria.Core.Dtos\Oniria.Core.Dtos.csproj" />
   </ItemGroup>
 
 </Project>
