Agregue estados emocionales + removi cosas innecesarias + refactorizar otras cosas

--- a/Oniria/appsettings.json
+++ b/Oniria/appsettings.json
@@ -26,5 +26,9 @@
     "Audience": "DreamHouseUser",
     "DurationInMinutes": 60
   },
+  "DeepSeekSettings": {
+    "BaseUrl": "https://api.deepseek.com/",
+    "ApiKey": "sk-48fb60759b8e440fa3942b6334d0ae6a"
+  },
   "AllowedHosts": "*"
 }
