creacion de Queries Membership y los dtos creacion y update de el Membership

--- a/Oniria.Core.Application/Oniria.Core.Application.csproj
+++ b/Oniria.Core.Application/Oniria.Core.Application.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Oniria.Core.Dtos\Oniria.Core.Dtos.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Membership\Commands\" />
+  </ItemGroup>
+
 </Project>
