--- a/Oniria.Core.Dtos/Oniria.Core.Dtos.csproj
+++ b/Oniria.Core.Dtos/Oniria.Core.Dtos.csproj
@@ -10,4 +10,8 @@
 	  <ProjectReference Include="..\Oniria.Core.Domain\Oniria.Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dream\Response\" />
+  </ItemGroup>
+
 </Project>
