--- a/Oniria/Oniria.csproj
+++ b/Oniria/Oniria.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="7.6.105" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.20">
       <PrivateAssets>all</PrivateAssets>
@@ -24,10 +24,6 @@
     <ProjectReference Include="..\Oniria.Infrastructure.Identity\Oniria.Infrastructure.Identity.csproj" />
     <ProjectReference Include="..\Oniria.Infrastructure.Persistence\Oniria.Infrastructure.Persistence.csproj" />
     <ProjectReference Include="..\Oniria.Infrastructure.Shared\Oniria.Infrastructure.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
