PERFIL EMPLEADO + PERFIL ORGANIZACION + LISTADO EMPLEAZDO

--- a/Oniria.Core.Dtos/Oniria.Core.Dtos.csproj
+++ b/Oniria.Core.Dtos/Oniria.Core.Dtos.csproj
@@ -10,4 +10,9 @@
 	  <ProjectReference Include="..\Oniria.Core.Domain\Oniria.Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Employee\Response\" />
+    <Folder Include="Organization\Reponse\" />
+  </ItemGroup>
+
 </Project>
