--- a/Oniria.Core.Dtos/Oniria.Core.Dtos.csproj
+++ b/Oniria.Core.Dtos/Oniria.Core.Dtos.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <Folder Include="Employee\Response\" />
     <Folder Include="Organization\Reponse\" />
+    <Folder Include="Patient\Response\" />
   </ItemGroup>
 
 </Project>
