--- a/Oniria/appsettings.json
+++ b/Oniria/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlServerConnection": "Server=DESKTOP-Q6875FB;Database=Oniria;Integrated Security=true;TrustServerCertificate=true;MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=DESKTOP-Q6875FB;Database=Oniria;Integrated Security=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "SqlServerConnection": "Server=localhost\\SQLEXPRESS;Database=Oniria;Integrated Security=true;TrustServerCertificate=true;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=localhost\\SQLEXPRESS;Database=Oniria;Integrated Security=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
